assets/css/compiled/main.css
/* ... */
.absolute {
  position:absolute
}

.relative {
  position:relative
}

.sticky {
  position:sticky
}

.inset-0 {
  inset:0px
}

.inset-x-0 {
  left:0px;
  right:0px
}

.bottom-0 {
  bottom:0px
}

.left-0 {
  left:0px
}

.right-0 {
  right:0px
}

.top-0 {
  top:0px
}

.top-20 {
  top:5rem
}

.top-\[110vh\] {
  top:110vh
}

.top-\[calc\(100vh-5\.5rem\)\] {
  top:calc(100vh - 5.5rem)
}

.z-10 {
  z-index:10
}

.z-30 {
  z-index:30
}

.z-\[1\] {
  z-index:1
}

.z-\[2\] {
  z-index:2
}

.order-first {
  order:-9999
}

.float-left {
  float:left
}

.\!-m-px {
  margin:-1px !important
}

.m-0 {
  margin:0px
}

.m-1 {
  margin:0.25rem
}

.m-2 {
  margin:0.5rem
}

.m-auto {
  margin:auto
}

.-mx-2 {
  margin-left:-0.5rem;
  margin-right:-0.5rem
}

.-my-2 {
  margin-top:-0.5rem;
  margin-bottom:-0.5rem
}

.mx-1 {
  margin-left:0.25rem;
  margin-right:0.25rem
}

.mx-\[15\%\] {
  margin-left:15%;
  margin-right:15%
}

.mx-\[3px\] {
  margin-left:3px;
  margin-right:3px
}

.mx-auto {
  margin-left:auto;
  margin-right:auto
}

.my-0 {
  margin-top:0px;
  margin-bottom:0px
}

.my-20 {
  margin-top:5rem;
  margin-bottom:5rem
}

.my-3 {
  margin-top:0.75rem;
  margin-bottom:0.75rem
}

.\!mb-0 {
  margin-bottom:0px !important
}

.\!mb-9 {
  margin-bottom:2.25rem !important
}

.\!mt-0 {
  margin-top:0px !important
}

.-mb-1 {
  margin-bottom:-0.25rem
}

.-ml-12 {
  margin-left:-3rem
}

.-mr-2 {
  margin-right:-0.5rem
}

.-mr-48 {
  margin-right:-12rem
}

.-mr-\[100\%\] {
  margin-right:-100%
}

.mb-0 {
  margin-bottom:0px
}

.mb-1 {
  margin-bottom:0.25rem
}

.mb-10 {
  margin-bottom:2.5rem
}

.mb-12 {
  margin-bottom:3rem
}

.mb-16 {
  margin-bottom:4rem
}

.mb-2 {
  margin-bottom:0.5rem
}

.mb-20 {
  margin-bottom:5rem
}

.mb-3 {
  margin-bottom:0.75rem
}

.mb-5 {
  margin-bottom:1.25rem
}

.mb-6 {
  margin-bottom:1.5rem
}

.mb-\[2px\] {
  margin-bottom:2px
}

.ml-2 {
  margin-left:0.5rem
}

.ml-3 {
  margin-left:0.75rem
}

.ml-6 {
  margin-left:1.5rem
}

.ml-auto {
  margin-left:auto
}

.mr-1 {
  margin-right:0.25rem
}

.mr-2 {
  margin-right:0.5rem
}

.mr-3 {
  margin-right:0.75rem
}

.mr-5 {
  margin-right:1.25rem
}

.mr-auto {
  margin-right:auto
}

.mt-0 {
  margin-top:0px
}

.mt-1 {
  margin-top:0.25rem
}

.mt-10 {
  margin-top:2.5rem
}

.mt-12 {
  margin-top:3rem
}

.mt-2 {
  margin-top:0.5rem
}

.mt-20 {
  margin-top:5rem
}

.mt-3 {
  margin-top:0.75rem
}

.mt-4 {
  margin-top:1rem
}

.mt-5 {
  margin-top:1.25rem
}

.mt-6 {
  margin-top:1.5rem
}

.mt-8 {
  margin-top:2rem
}

.mt-\[-2px\] {
  margin-top:-2px
}

.mt-\[0\.1rem\] {
  margin-top:0.1rem
}

.box-content {
  box-sizing:content-box
}

.block {
  display:block
}

.inline-block {
  display:inline-block
}

.inline {
  display:inline
}

.flex {
  display:flex
}

.grid {
  display:grid
}

.hidden {
  display:none
}

.\!h-px {
  height:1px !important
}

.h-1\/2 {
  height:50%
}

.h-12 {
  height:3rem
}

.h-24 {
  height:6rem
}

.h-3 {
  height:0.75rem
}

.h-36 {
  height:9rem
}

.h-48 {
  height:12rem
}

.h-6 {
  height:1.5rem
}

.h-8 {
  height:2rem
}

.h-\[1000px\] {
  height:1000px
}

.h-\[150px\] {
  height:150px
}

.h-\[3px\] {
  height:3px
}

.h-\[800px\] {
  height:800px
}

.h-full {
  height:100%
}

.h-screen {
  height:100vh
}

.max-h-3 {
  max-height:0.75rem
}

.max-h-\[5rem\] {
  max-height:5rem
}

.min-h-0 {
  min-height:0px
}

.min-h-\[148px\] {
  min-height:148px
}

.min-h-full {
  min-height:100%
}

.\!w-px {
  width:1px !important
}

.w-12 {
  width:3rem
}

.w-24 {
  width:6rem
}

.w-3 {
  width:0.75rem
}

.w-36 {
  width:9rem
}

.w-6 {
  width:1.5rem
}

.w-8 {
  width:2rem
}

.w-\[15\%\] {
  width:15%
}

.w-\[30px\] {
  width:30px
}

.w-full {
  width:100%
}

.w-screen {
  width:100vw
}

.min-w-0 {
  min-width:0px
}

.min-w-\[1\.8rem\] {
  min-width:1.8rem
}

.min-w-\[220px\] {
  min-width:220px
}

.min-w-\[30px\] {
  min-width:30px
}

.min-w-full {
  min-width:100%
}

.max-w-3xl {
  max-width:48rem
}

.max-w-7xl {
  max-width:80rem
}

.max-w-\[1600px\] {
  max-width:1600px
}

.max-w-\[5rem\] {
  max-width:5rem
}

.max-w-\[64rem\] {
  max-width:64rem
}

.max-w-fit {
  max-width:-moz-fit-content;
  max-width:fit-content
}

.max-w-full {
  max-width:100%
}

.max-w-prose {
  max-width:65ch
}

.max-w-xl {
  max-width:36rem
}

.flex-1 {
  flex:1 1 0%
}

.flex-auto {
  flex:1 1 auto
}

.flex-initial {
  flex:0 1 auto
}

.flex-none {
  flex:none
}

.grow {
  flex-grow:1
}

.basis-\[40\.0\%\] {
  flex-basis:40.0%
}

.basis-\[60\.0\%\] {
  flex-basis:60.0%
}

.-translate-y-8 {
  --tw-translate-y:-2rem;
  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
}

@keyframes pulse {
  50% {
    opacity:.5
  }
}

.animate-pulse {
  animation:pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite
}

.cursor-default {
  cursor:default
}

.cursor-pointer {
  cursor:pointer
}

.list-none {
  list-style-type:none
}

.appearance-none {
  -webkit-appearance:none;
     -moz-appearance:none;
          appearance:none
}

.columns-2 {
  -moz-columns:2;
       columns:2
}

.flex-row {
  flex-direction:row
}

.flex-col {
  flex-direction:column
}

.flex-wrap {
  flex-wrap:wrap
}

.items-end {
  align-items:flex-end
}

.items-center {
  align-items:center
}

.justify-end {
  justify-content:flex-end
}

.justify-center {
  justify-content:center
}

.justify-between {
  justify-content:space-between
}

.gap-4 {
  gap:1rem
}

.space-x-2 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-x-reverse:0;
  margin-right:calc(0.5rem * var(--tw-space-x-reverse));
  margin-left:calc(0.5rem * calc(1 - var(--tw-space-x-reverse)))
}

.space-x-3 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-x-reverse:0;
  margin-right:calc(0.75rem * var(--tw-space-x-reverse));
  margin-left:calc(0.75rem * calc(1 - var(--tw-space-x-reverse)))
}
/* ... */

